internship-page-changes: fixed intern images and faq as well as modified the learn more button on main page

--- a/index.html
+++ b/index.html
@@ -516,39 +516,6 @@
                     </p>
                   </div>
                 </row>
-              </div>
-              <div class="tab-pane fade" id="internship" role="tabpanel" aria-labelledby="internship-tab">
-                <row>
-                  <div class="col-md-8 offset-md-2">
-                    <h3 class="text-uppercase g-color-white">
-                        <strong id="internship-tab">Internship</strong>
-                      </h3>
-                  </div>
-                </row>
-                <row>
-                  <div class="col-md-8 offset-md-2">
-                    <p class="g-color-white">
-                      Summer Internships take place from May to August in the
-                      Make Offices in Reston, Virginia, within the metropolitan
-                      area of Washington, D.C. The interns will design and
-                      implement software applications as part of a collaborative
-                      team of interns and professional software developers. The
-                      intern will gain experience in full stack development
-                      using modern web technologies, including Amazon Web
-                      Services (AWS). Interns will also learn best practices in
-                      version control systems using GitHub, and will incorporate
-                      Agile methodologies for self-organization and regular
-                      delivery of code for production. The intern will develop
-                      communication skills with customers to produce useful
-                      software for the client.
-                    </p>
-                  </div>
-                </row>
-                <row>
-                  <div class="text-center">
-                    <a href="./intern.html" type="button" class="btn btn-info btn-lg" role="button" style="color:black">Learn More</a>
-                  </div>
-                </row>
               </div><br/><br />
             </div>
           </div>
@@ -582,7 +549,7 @@
           <div class="container g-pb-30">
             <row>
               <div class="text-center">
-                <a href="./intern.html" type="button" class="btn button_clear" role="button"> Learn More </a>
+                <a href="./intern.html" type="button" class="btn" role="button"> Learn More </a>
               </div>
             </row>
           </div>
