--- a/intern.html
+++ b/intern.html
@@ -216,7 +216,9 @@
         <div class="g-pt-100 g-pb-30">
           <div class="container text-center g-max-width-750 g-mb-20 g-pt-10">
             <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
-              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Frequently Asked Questions</h2>
+              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">
+                At-A-Glance
+              </h2>
             </div>
           </div>
           <br />
@@ -227,12 +229,15 @@
                   <div class="d-flex g-mt-25 g-mr-40"><span class="d-block g-color-primary g-font-size-48 g-line-height-1"></span></div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                      Why would a college grad want to work at Case Consulting?
+                      Who?
                     </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          XXXXXXXX
+                          Are you a Computer Science or Computer Engineering Junior who enjoys learning and
+                          working with current development technologies?  Are you interested in experiencing
+                          what it means to be a professional application developer? If yes, then this
+                          internship is for you!
                         </p>
                       </li>
                     </ul>
@@ -247,13 +252,16 @@
                       </span> </div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        What is a government contractor?
+                        What?
                       </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          A government contractor is someone who is contracted out to work directly for the government or for a prime contractor that owns a government contract. A contractor works at a government or prime facility along with contractors from other companies. At
-                          Case Consulting, it is our goal to have two or more teammates on the same contract working together.
+                          During your internship at Case Consulting you will be guided by our team of
+                          software professionals and previous interns to apply cutting edge software
+                          development tools and practices to a real software product.  Throughout the
+                          program, you will use many software engineering best practices such as
+                          agile/scrum, pair programming, automated testing, and test-driven development.
                         </p>
                       </li>
                     </ul>
@@ -268,13 +276,12 @@
                       </span> </div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        What is the value of a security clearance?
+                        When?
                       </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          A security clearance opens the door to an exciting world of opportunity that not everyone qualifies for. If you make the cut, you’ll have access to mission sensitive jobs with intriguing problems that need to be solved. Not to mention, there’s a high
-                          demand for software engineers with a security clearance which provides added job security.
+                          Summer 2019
                         </p>
                       </li>
                     </ul>
@@ -289,17 +296,12 @@
                       </span> </div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        Why is there a 1 year commitment?
+                        Where?
                       </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          A commitment to Case Consulting is necessary to submit you for a U.S. Government security clearance. Also, as a company we take our investment into our college hires very seriously. We pour a lot of time, energy, and resources into this program so that
-                          it is not an average internship experience, but rather true development of the skills required to succeed as a software engineer in the real world.
-                        </p>
-                        <p class="list_elem">
-                          To make this decision easier, in addition to the offer for the summer internship, you will also receive an offer for full time employment with Case Consulting, including your minimum starting salary. We understand that this is a big commitment, but we
-                          believe you will love our culture as much as we do and will want to stay well past any specified commitment time period.
+                          The internship is located at our shared office space in Reston, VA.
                         </p>
                       </li>
                     </ul>
@@ -313,12 +315,15 @@
                   <div class="d-flex g-mt-25 g-mr-40"><span class="d-block g-color-primary g-font-size-48 g-line-height-1"></span></div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        Where is the internship located?
+                        Why?
                       </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          The internship in located at our shared office space in Reston, VA.
+                          Work with cutting edge technologies like JavaScript, Node/Express, Vue, Amazon
+                          Web Services, and Bootstrap. Gain professional experience working in a simulated
+                          customer environment using industry best practices on a self-organizing team,
+                          apply for a security clearance, and work for a top notch tech company.
                         </p>
                       </li>
                     </ul>
@@ -334,13 +339,45 @@
                   </div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        Once full time where would I be working?
+                        How?
                       </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          Case Consulting has quite a few projects to place college new hires on when they start full time. Our goal is to find one that best fits your skill-sets and to place you on a team with other Case Consulting employees. Most of Case Consulting’s work is
-                          located in the Northern Virginia area to include Tyson’s, McLean, Bethesda, Reston, Herndon, and Chantilly.
+                          Apply today!
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="container text-center g-max-width-750 g-mb-20 g-pt-10">
+                <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
+                  <h3 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">
+                    Frequently Asked Questions
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
+                <div class="media">
+                  <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                  <div class="media-body align-self-center">
+                    <h3 class="h5 text-uppercase g-font-weight-800">
+                        What is a government contractor?
+                      </h3>
+                    <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                      <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                        <p class="list_elem">
+                          Government Contractors are people who work for a private or public company on
+                          contracts setup to deliver solutions to the Government.  These companies either
+                          win prime contracts themselves or partner with companies to work as a
+                          subcontractor.  As a contractor you will work at a Government facility with
+                          other contractors and Government employees.
                         </p>
                       </li>
                     </ul>
@@ -355,12 +392,15 @@
                       </span> </div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        Is there any relocation or housing compensation for the internship?
+                        Why do I need a security clearance?
                       </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          Case Consulting doesn't offer relocation or housing compensation for the internship program but would work with our network to help find housing for the summer.
+                          A security clearance grants you the ability to work on some of the most exciting
+                          projects out there. You will work to solve very complicated and unique problems
+                          helping people around the world. In addition to the exciting work, a clearance
+                          provides you with an asset that improves job security and your demand to the market.
                         </p>
                       </li>
                     </ul>
@@ -375,13 +415,50 @@
                       </span> </div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        What technologies will I be working with during the internship?
+                      Why is there a 1 year commitment?
+                    </h3>
+                    <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                      <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                        <p class="list_elem">
+                          At the end of the internship this question will be obsolete because we take pride in
+                          the experience our internship provides and are confidant you will want to work with
+                          us going forward. A commitment to Case Consulting is necessary to submit you for a
+                          U.S. Government security clearance.  As a company we invest heavily in our interns
+                          and take the program very seriously. Everyone involved gives a lot of time and
+                          effort, working to ensure the program is not an average internship experience,
+                          but rather true development of the skills required to succeed as a software engineer
+                          in the real world.
+                        </p>
+                        <p class="list_elem">
+                          Before the completion of a successful internship you can expect to receive an offer
+                          for full time employment with Case Consulting, including your minimum starting
+                          salary and benefits.  We understand that this is a big commitment, but we believe
+                          you will love our culture as much as we do and will want to stay well past any
+                          specified commitment time period.
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
+                <div class="media">
+                  <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                  <div class="media-body align-self-center">
+                    <h3 class="h5 text-uppercase g-font-weight-800">
+                        Where is your full-time work?
                       </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
-                          It is our objective to have interns working with the most current technologies and industry best practices. Tech changes fast and we work to keep you as current as possible. Some of the technologies that have been used in past years are JavaScript, Node/Express,
-                          Angular, Vue, Amazon Web Services and Bootstrap.
+                          Case Consulting has quite a few projects to place college new hires on when they
+                          start full time.  Our goal is to find one that best fits your skill-sets and to
+                          place you on a team with other Case Consulting employees.  Most of Case
+                          Consulting’s work is located in the Northern Virginia area to include Tyson’s,
+                          McLean, Bethesda, Reston, Herndon, and Chantilly.
                         </p>
                       </li>
                     </ul>
@@ -402,7 +479,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/fahad.jpg" class="rounded-circle potrait" />
+              <img src="https://res.cloudinary.com/consultwithcase/image/upload/v1535720007/website/interns/fahad.jpg" class="rounded-circle potrait" />
             </div>
             <div class="col-md-10">
               <p class="g-color-white">
@@ -420,12 +497,12 @@
               </p>
             </div>
             <div class="col-md-2 order-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/jacob.jpg" class="rounded-circle potrait" style="text-align:center" />
+              <img src="https://res.cloudinary.com/consultwithcase/image/upload/c_crop,g_custom/c_scale,w_160/v1535719942/website/interns/jacob.jpg" class="rounded-circle potrait" style="text-align:center" />
             </div>
           </div>
           <div class="row" style="margin-top:100px;">
             <div class="col-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/andrew.gif" class="rounded-circle potrait" />
+              <img src="https://res.cloudinary.com/consultwithcase/image/upload/v1535719942/website/interns/andrew.gif" class="rounded-circle potrait" />
             </div>
             <div class="col-md-10">
               <p class="g-color-white">
@@ -443,12 +520,12 @@
               </p>
             </div>
             <div class="col-md-2 order-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/sam.jpg" class="rounded-circle potrait" style="text-align:center" />
+              <img src="https://res.cloudinary.com/consultwithcase/image/upload/c_crop,g_custom/c_scale,w_160/v1535719942/website/interns/sam.jpg" class="rounded-circle potrait" style="text-align:center" />
             </div>
           </div>
           <div class="row" style="margin-top:100px;">
             <div class="col-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/long_head.jpg" class="rounded-circle potrait" />
+              <img src="https://res.cloudinary.com/consultwithcase/image/upload/c_scale,w_160/v1536585437/website/interns/joe.gif" class="rounded-circle potrait" />
             </div>
             <div class="col-md-10">
               <p class="g-color-white">
