--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     </li>
                     <li class="g-pos-rel g-pl-10 g-mb-15">
                       <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
-                      <p class="list_elem"> Flexible Spending Account (FSA)</p>
+                      <p class="list_elem"> Health Savings Account (HSA) and Flexible Spending Account (FSA) options</p>
                     </li>
                     <li class="g-pos-rel g-pl-10 g-mb-15">
                       <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
@@ -339,7 +339,7 @@
                     <li class="g-pos-rel g-pl-10 g-mb-15">
                       <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                       <p class="list_elem">
-                        24 hours per year of PTO for professional development and certification
+                        3 days per year of PTO for professional development and certification
                       </p>
                     </li>
                   </ul>
@@ -359,12 +359,30 @@
                   </span>
                 </div>
                 <div class="media-body align-self-center">
-                  <h3 class="h5 text-uppercase g-font-weight-800">Referrals</h3>
+                  <h3 class="h5 text-uppercase g-font-weight-800">Bonuses</h3>
                   <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                     <li class="g-pos-rel g-pl-10 g-mb-15">
                       <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
-                      <p class="g-font-size-default g-color-gray-dark-v2 mb-0 list_elem">
-                        $2,500 referral bonus for fully-cleared candidates
+                      <p class="list_elem">
+                        $5,000 referral bonus for fully-cleared candidates
+                      </p>
+                    </li>
+                    <li class="g-pos-rel g-pl-10 g-mb-15">
+                      <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                      <p class="list_elem">
+                        $2,500 referral bonus for uncleared candidates
+                      </p>
+                    </li>
+                    <li class="g-pos-rel g-pl-10 g-mb-15">
+                      <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                      <p class="list_elem">
+                        Spot bonuses for employee accomplishments
+                      </p>
+                    </li>
+                    <li class="g-pos-rel g-pl-10 g-mb-15">
+                      <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                      <p class="list_elem">
+                        High 5 bonuses for colleague recognition
                       </p>
                     </li>
                   </ul>
@@ -383,7 +401,10 @@
                   <h3 class="h5 text-uppercase g-font-weight-800">Time Off</h3>
                   <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                     <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top g-left-0 g-font-size-16 g-color-primary"></i>
-                      <p class="list_elem"> 33 days of leave each year (PTO, Holidays, and Training) </p>
+                      <p class="list_elem"> 34 days of leave each year (20 PTO, 10 holidays, 3 training days, and 1 volunteer day)</p>
+                    </li>
+                    <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top g-left-0 g-font-size-16 g-color-primary"></i>
+                      <p class="list_elem"> 1 week leave of absence every 5th anniversary</p>
                     </li>
                   </ul>
                 </div>
